# writer_reader_inkml

./: 10065.inkml  Cargo.toml  README.md  correct.xml  highlighter_onenote.xml  journal_output.xml
src/: brushes.rs  context.rs  lib.rs  main.rs  parser.rs  trace_data.rs  traits.rs  writer.rs  xml_helpers.rs
test_files/: bool_trace.xml  onenote_multiple_contexts.xml  onenote_web.xml  word_output.xml
